--- a/README.Rmd
+++ b/README.Rmd
@@ -27,17 +27,13 @@ knitr::include_graphics("man/figures/microshades_logo.png")
 The microshades R package is designed to provide custom color shading palettes that improve accessibility and data organization. Approximately 300 million people in the world have Color Vision Deficiency (CVD), which is comparable to the most recent estimate of the US population. When creating  figures and graphics that use color, it is important to consider that individuals with CVD will interact with this material, and may not perceive all of the information tied to the colors as intended. This package includes carefully crafted palettes that improve CVD accessibility and may be applied to any plot. Additionally, there are functions to apply microshades palettes to microbiome data in a color-oriented orginazation. 
 
 
-
-Please visit our [website](https://karstenslab.github.io/microshades) to learn more about microshades.
-
-
 ## Installation
 
 ``` r
 remotes::install_github("KarstensLab/microshades")
 ```
 
-If you are having trouble with installation, you may need to install packages such as  [phyloseq](https://joey711.github.io/phyloseq/index.html) or [speedyseq](https://mikemc.github.io/speedyseq) before installing microshades.
+If you plan to use microshades with microbiome data, you may need to install packages such as  [phyloseq](https://joey711.github.io/phyloseq/index.html) or [speedyseq](https://mikemc.github.io/speedyseq).
 
 ## The shades
 
