--- a/README.Rmd
+++ b/README.Rmd
@@ -11,15 +11,11 @@ pandoc_args: [
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.path = "man/figures/README-"
 )
 ```
 
-```{r, echo = FALSE, fig.align='right', fig.height= 1, fig.width=1}
-knitr::include_graphics("man/figures/microshades_hex_logo.png")
-```
-
+# microshades <img src="man/figures/microshades_hex_logo.png" align="right" alt="" width="120" />
 
 <!-- badges: start -->
 
