--- a/vignettes/microshades-GP.Rmd
+++ b/vignettes/microshades-GP.Rmd
@@ -26,16 +26,32 @@ library(ggplot2)
 library(dplyr)
 library(cowplot)
 library(patchwork)
+
+# The dataset Global Patterns is a phyloseq object avalible from the Phyloseq package
+data(GlobalPatterns)
+
 ```
 
 ## Use the microshades functions
 
 ```{r}
-# The dataset Global Patterns is a phyloseq object avalible from the Phyloseq package
-data(GlobalPatterns)
 
 # Agglomerate and normalize the phyloseq object, and melt to a data frame
 mdf_prep <- prep_mdf(GlobalPatterns)
+
+# There is an alterantive to using this function if you do not have speedyseq:
+# 
+# mdf_prep <- GlobalPatterns %>%
+#         tax_glom("Genus") %>%
+#         phyloseq::transform_sample_counts(function(x) { x/sum(x) }) %>%
+#         psmelt() %>%
+#         filter(Abundance > 0)
+#
+# both options will produce the same results, however the microshades prep_mdf() uses the   
+# speedyseq package to increase the speed of tax_glom() and psmelt(), which may be preferable  
+# when working with large datasets
+
+  
 
 # Generate a color object for the specified data
 color_objs_GP <- create_color_dfs(mdf_prep,selected_groups = c("Verrucomicrobia", "Proteobacteria", "Actinobacteria", "Bacteroidetes",
