--- a/vignettes/microshades-GP.Rmd
+++ b/vignettes/microshades-GP.Rmd
@@ -26,6 +26,7 @@ library(ggplot2)
 library(dplyr)
 library(cowplot)
 library(patchwork)
+library(forcats)
 
 # The dataset Global Patterns is a phyloseq object avalible from the Phyloseq package
 data(GlobalPatterns)
