--- a/vignettes/microshades-HMP.Rmd
+++ b/vignettes/microshades-HMP.Rmd
@@ -31,6 +31,7 @@ library(phyloseq)
 library(dplyr)
 library(ggplot2)
 library(microshades)
+library(forcats)
 ```
 
 ## Load and subset the HMP data
