Fix tidyverse selection warnings

--- a/vignettes/microshades-GP.Rmd
+++ b/vignettes/microshades-GP.Rmd
@@ -27,6 +27,7 @@ library(dplyr)
 library(cowplot)
 library(patchwork)
 library(forcats)
+library(tidyverse)
 
 # The dataset Global Patterns is a phyloseq object avalible from the Phyloseq package
 data(GlobalPatterns)
