--- a/vignettes/microshades-HMP.Rmd
+++ b/vignettes/microshades-HMP.Rmd
@@ -32,6 +32,7 @@ library(dplyr)
 library(ggplot2)
 library(microshades)
 library(forcats)
+library(tidyverse)
 ```
 
 ## Load and subset the HMP data
